# ChinaIdNumberCheck

./: CMakeLists.txt  ChinaIdNumber.cpp  ChinaIdNumber.h  main.cpp  readme.md
